geteta/examples/cycles/cycles_wrong.gtt
table CyclesWrong {
    var input i : INT
    var output o : INT

   group 0 [1, 1] {
       row 1 [1, 1]{ o: 1 }
       row 2 [2, 2]{
           o: 2
       }
       row 3 [3, 3]{
           o: 3
       }
       row 4 [4, 4]{
           o: 4
       }
       row 5 [5, 5]{
           o: 5
       }
       row 6 [6, 6]{
           o: 6
       }
       row 7 [7, 7]{
           o: 7
       }
       row 8 [8, 8]{
           o: 8
       }
       row 9 [9, 9]{
           o: 9
       }
       row 10 [10, 10]{
           o: 10
       }
       // error
       row 11 { o: 0 }
   }
}